--- a/assets/style.css
+++ b/assets/style.css
@@ -6,10 +6,21 @@
 
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  margin: 3.5%;
+  padding: 0%;
+}
+ul {
+  list-style-type: none;
+  padding: 0%;
+}
+li {
+  display: inline;
+  margin-right: 10px;
+}
+a {
+  text-decoration: none;
 }
 .img-small {
-  width: 5%;
-  height: 5%;
+  width: 4%;
+  height: 4%;
 }
