--- a/assets/style.css
+++ b/assets/style.css
@@ -4,10 +4,13 @@
 /* Include Normalize.css */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 
+html,
 body {
   font-family: Arial, sans-serif;
-  margin: 3.5%;
+  margin: 0%;
   padding: 0%;
+  background-color: white;
+  height: 100%;
 }
 ul {
   list-style-type: none;
@@ -19,6 +22,18 @@ li {
 }
 a {
   text-decoration: none;
+}
+section {
+  background-color: lightcoral;
+  flex: 1;
+  padding: 1em;
+  margin: 1em;
+}
+.container {
+  min-height: 100%;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
 }
 .img-small {
   width: 4%;
