updated background color and font color also added name and role

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,10 +7,12 @@
 html,
 body {
   font-family: Arial, sans-serif;
-  background-color: white;  
+  background-color: #333333;
   margin: 0%;
   padding: 0%;
+  color: #cccccc;
 }
+
 .hover-effect {
   background-color: white;
   margin-top: 1.5%;
@@ -23,16 +25,19 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
-  transition: transform 0.3s; /* Add a smooth transition effect for the hover */
+  transition: transform 0.3s;
+  /* Add a smooth transition effect for the hover */
   /* centers the header */
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
 }
 
 .hover-effect:hover {
-  transform: scale(1.05); /* Increase the size on hover */
+  transform: scale(1.05);
+  /* Increase the size on hover */
 }
+
 header {
   background-color: white;
   margin-top: 1.5%;
@@ -42,21 +47,27 @@ header {
   padding: 0.5% 0%;
   text-align: center;
   border-radius: 51% 49% 49% 51% / 49% 56% 44% 51%;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  /* Add a subtle shadow */
   box-sizing: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.1); /* Add a somewhat transparent border */
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  /* Add a somewhat transparent border */
 }
+
 ul {
   list-style-type: none;
   padding: 0%;
 }
+
 li {
   display: inline;
   margin-right: 10px;
 }
+
 a {
   text-decoration: none;
 }
+
 /*
 move the footer to the middle of the page
 try to add soem spacing on the outr of the icons so it dosent look so clumped up on the outside icons gmail and insta
@@ -64,14 +75,19 @@ add a border somewhat trasperent
 change background color to gray but make it somewhat transperetn to see anything else in the background
 */
 footer {
-  padding: 20px 0;
-  /* padding: 0px; */
+  /* padding: 20px 0; */
+  padding: 0px;
   border-radius: 50px;
   margin: 0 auto;
-  margin-right: 35.5%;
-  margin-left: 35.5%;
-  /* margin-bottom: 1%; */
-  background-color: rgba(0, 255, 255, 0.7); /* Aqua color with 70% opacity */
+  margin-right: 40%;
+  margin-left: 40%;
+  margin-bottom: 0.5%;
+  background-color: rgba(211,
+      211,
+      211,
+      0.3);
+  /* Light gray with 50% transparency */
+  /* background-color: rgba(0, 255, 255, 0.7); /* Aqua color with 70% opacity */
   text-align: center;
   display: flex;
   justify-content: space-around;
@@ -81,26 +97,26 @@ footer {
   right: 0;
 }
 
-footer:hover {
-  filter: grayscale(100%);
-}
-
 .img-small {
-  width: 40px;
-  height: 40px;
-  margin: 8px;
+  width: 38px;
+  height: 38px;
+  margin: 3.5px;
   border-radius: 30%;
   transition: transform 0.3s ease-in-out;
 }
+
 .img-small:hover {
-  transform: scale(1.2); /* Enlarge the icon on hover */
+  transform: scale(1.2);
+  /* Enlarge the icon on hover */
 }
-.about-me{
+
+.about-me {
   text-align: center;
   max-width: 800px;
   margin: 0 auto;
   margin-left: 22%;
   margin-right: 22%;
 }
+
 /* dont know if we will need to use this */
-.about-me-h2{}
+.about-me-h2 {}
