--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,21 @@ body {
   margin: 0%;
   padding: 0%;
   color: #cccccc;
+  display: flex;
+  height: 100%;
+}
+
+.info {
+  margin-left: 80px;
+  margin-top: 50px;
+  margin-right: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.body_info {
+  display: flex;
+  flex-direction: column;
 }
 
 .hover-effect {
@@ -79,22 +94,19 @@ footer {
   padding: 0px;
   border-radius: 50px;
   margin: 0 auto;
-  margin-right: 40%;
-  margin-left: 40%;
-  margin-bottom: 0.5%;
-  background-color: rgba(211,
-      211,
-      211,
-      0.3);
+  /* margin-right: 40%; */
+  /* margin-left: 40%; */
+  /* margin-bottom: 0.5%; */
+  background-color: rgba(211, 211, 211, 0.3);
   /* Light gray with 50% transparency */
   /* background-color: rgba(0, 255, 255, 0.7); /* Aqua color with 70% opacity */
   text-align: center;
   display: flex;
   justify-content: space-around;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  /* position: fixed; */
+  /* bottom: 0; */
+  /* left: 0; */
+  /* right: 0; */
 }
 
 .img-small {
@@ -117,6 +129,3 @@ footer {
   margin-left: 22%;
   margin-right: 22%;
 }
-
-/* dont know if we will need to use this */
-.about-me-h2 {}
