--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-/* Include Normalize.css */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 
 html,
@@ -27,7 +26,6 @@ img {
 
 .container {
   display: flex;
-  justify-content: space-between;
   margin: 0 390px;
   height: 100%;
 }
@@ -60,8 +58,6 @@ h3 {
   display: flex;
   flex-direction: column;
   margin-top: 95px;
-  /* margin-left: 50px; */
-  /* padding-left: 80px; */
 }
 
 .tableContents {
@@ -73,9 +69,7 @@ h3 {
 
 .tableContents li {
   position: relative;
-  /* Required for absolute positioning of pseudo-element */
   padding-left: 45px;
-  /* Adjust padding to create space for the line */
   margin-bottom: 30px;
   font-size: 13px;
 }
@@ -86,70 +80,74 @@ h3 {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  /* Center vertically */
   width: 30px;
-  /* Adjust the width of the line */
   height: 0.5px;
-  /* Adjust the thickness of the line */
   background-color: lightgray;
-  /* Adjust the color of the line */
 }
-
-/* .tableContents li:before { */
-/*   /* content: "-"; */
-*/
-/*   content: ""; */
-/*   position: absolute; */
-/*   /* margin-right: 8px; */
-*/
-/*   /* top: 50%; */
-*/
-/*   /* left: 0; */
-*/
-/*   width: 10px; */
-/*   height: 3px; */
-/*   background-color: black; */
-/**/
-/* } */
 
 p {
   margin: 0;
+  line-height: 1.625;
 }
 
 p:nth-of-type(-n + 2) {
   margin-bottom: 17px;
-  /* Adjust the margin as needed */
 }
 
 /* Media Query for changing layout on smaller screens */
 @media screen and (max-width: 1050px) {
   .container {
     flex-direction: column;
-    margin: 0 auto;
-    /* Center the container */
+    margin: 0px 45px;
   }
 
   .info {
-    margin: 20px auto;
-    /* Center the info section */
-    text-align: center;
-    /* Center text */
+    flex-direction: column;
   }
 
   .logos {
     position: static;
-    margin-top: 20px;
-    /* Adjust margin */
+    margin-top: 15px;
   }
 
   .body_info {
-    margin-top: 20px;
-    /* Adjust margin */
+    margin-top: 6rem;
   }
 
   .tableContents li {
     padding-left: 20px;
-    /* Adjust padding */
+  }
+
+  h1 {
+    font-size: 48px;
+  }
+
+  h3 {
+    font-size: 20px;
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+  }
+
+  .bf {
+    max-width: 22rem;
+    margin-top: 1.5rem;
+    line-height: 1.4;
+  }
+
+  .tableContents {
+    display: none;
+  }
+
+  .tbHeaders {
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-bottom: 2rem;
+    color: #ffffff;
+  }
+
+  .tbHeaders:not(:first-child) {
+    margin-top: 6rem;
   }
 }
 
@@ -159,21 +157,17 @@ p:nth-of-type(-n + 2) {
   html,
   body {
     min-width: 500px;
-    /* Adjust the minimum width as needed */
   }
 
   .container {
     min-width: 500px;
-    /* Adjust the minimum width as needed */
   }
 
   .info {
     min-width: 500px;
-    /* Adjust the minimum width as needed */
   }
 
   .body_info {
     min-width: 500px;
-    /* Adjust the minimum width as needed */
   }
 }
