--- a/assets/style.css
+++ b/assets/style.css
@@ -7,46 +7,51 @@ body {
   color: #cccccc;
   height: 100%;
   font-size: 17px;
-}
-
-/* done */
-
-.logos {
-  display: flex;
-  position: absolute;
-  bottom: 95px;
-}
-
-/* done */
-
-img {
-  width: 30px;
   margin: 0;
-}
-
-/* done */
-
-.logo {
-  margin: 0 9px;
-}
-
-done .container {
   display: flex;
-  height: 100%;
+  justify-content: center;
+  align-items: flex-start;
 }
 
-/* done */
+.container {
+  display: flex;
+  width: 60%;
+  height: 100vh;
+  margin: 0;
+  margin-top: 4rem;
+}
 
 .info {
-  margin-top: 80px;
+  position: fixed;
+  /* top: 4rem; */
+  width: 25%;
+  padding: 20px;
+  box-sizing: border-box;
+  height: 100%;
+  /* this is me testing  */
   display: flex;
   flex-direction: column;
-  position: fixed;
-  width: 300px;
-  height: 100vh;
 }
 
-/* done */
+.body_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 50%;
+  padding: 20px;
+  box-sizing: border-box;
+  margin-left: 47%;
+}
+
+p {
+  margin: 0;
+  line-height: 1.625;
+}
+
+p:nth-of-type(-n + 2) {
+  margin-bottom: 17px;
+}
 
 h1 {
   font-size: 3.2em;
@@ -65,17 +70,25 @@ h3 {
   margin-bottom: 10px;
 }
 
-.body_info {
-  margin-top: 80px;
-  /* margin-right: 150px; */
+.logos {
   display: flex;
-  flex-direction: column;
-  position: fixed;
-  width: 40%;
-  height: 100vh;
-  padding-left: 500px;
+  position: absolute;
+  /* bottom: 95px; */
+  bottom: 150px;
+  /* bottom: 2rem; */
 }
-/* done */
+
+img {
+  width: 30px;
+  margin: 0;
+}
+
+.logo {
+  margin: 0 9px;
+}
+
+.bf {
+}
 
 .tableContents {
   list-style-type: none;
@@ -83,7 +96,6 @@ h3 {
   margin: 0;
   margin-top: 65px;
 }
-/* done */
 
 .tableContents li {
   position: relative;
@@ -91,7 +103,6 @@ h3 {
   margin-bottom: 30px;
   font-size: 13px;
 }
-/* done */
 
 .tableContents li:before {
   content: "";
@@ -103,18 +114,6 @@ h3 {
   height: 0.5px;
   background-color: lightgray;
 }
-/* done */
-
-p {
-  margin: 0;
-  line-height: 1.625;
-}
-/* done */
-
-p:nth-of-type(-n + 2) {
-  margin-bottom: 17px;
-}
-/* done */
 
 /* Media Query for responsive design */
 @media screen and (max-width: 1050px) {
