--- a/assets/style.css
+++ b/assets/style.css
@@ -23,12 +23,10 @@ body {
 
 .info {
   position: fixed;
-  /* top: 4rem; */
   width: 25%;
   padding: 20px;
   box-sizing: border-box;
   height: 100%;
-  /* this is me testing  */
   display: flex;
   flex-direction: column;
 }
@@ -67,15 +65,17 @@ h3 {
   color: #ffffff;
   margin: 0;
   margin-top: 8px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+}
+
+h5 {
+  font-size: 17px;
 }
 
 .logos {
   display: flex;
   position: absolute;
-  /* bottom: 95px; */
   bottom: 150px;
-  /* bottom: 2rem; */
 }
 
 img {
@@ -113,6 +113,19 @@ img {
   width: 30px;
   height: 0.5px;
   background-color: lightgray;
+}
+
+.tbHeaders {
+  display: none;
+}
+
+.skillList li {
+  margin: 0;
+  line-height: 1.625;
+}
+
+.skillList {
+  margin-top: 5.5rem;
 }
 
 /* Media Query for responsive design */
