--- a/assets/style.css
+++ b/assets/style.css
@@ -126,7 +126,7 @@ img {
   /* margin-bottom: 5.5rem; */
 }
 
-/* Media Query for responsive design */
+/* Media Query for responsive design for smaller screens*/
 @media screen and (max-width: 1050px) {
   .container {
     flex-direction: column;
@@ -187,5 +187,21 @@ img {
     max-width: 22rem;
     margin-top: 1.5rem;
     line-height: 1.4;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .container {
+    margin: 1.5rem 0.5rem;
+  }
+}
+
+@media screen and (max-width: 625px) {
+  h1 {
+    font-size: 2.2em;
+  }
+
+  h3 {
+    font-size: 1.1em;
   }
 }
