--- a/assets/style.css
+++ b/assets/style.css
@@ -123,7 +123,22 @@ img {
 
 .skillList {
   margin-top: 5.5rem;
-  /* margin-bottom: 5.5rem; */
+}
+
+/* Media Queries for responsiveness */
+@media (max-width: 1450px) {
+  .container {
+    width: 75%;
+  }
+
+  .info {
+    width: 30%;
+  }
+
+  .body_info {
+    width: 60%;
+    margin-left: 50%;
+  }
 }
 
 /* Media Query for responsive design for smaller screens*/
