added javascript to help with the scrolltoview for the list

--- a/assets/style.css
+++ b/assets/style.css
@@ -112,6 +112,11 @@ img {
   background-color: lightgray;
 }
 
+.tableContents li:hover {
+  transform: scale(1.2);
+  transition: transform 0.2s ease-in-out;
+}
+
 .tbHeaders {
   display: none;
 }
