--- a/assets/style.css
+++ b/assets/style.css
@@ -96,9 +96,12 @@ img {
 
 .tableContents li {
   position: relative;
-  padding-left: 45px;
+  padding-left: 50px;
   margin-bottom: 30px;
   font-size: 13px;
+  letter-spacing: 1.5px;
+  cursor: pointer;
+  transition: padding-left 0.15s ease;
 }
 
 .tableContents li:before {
@@ -107,14 +110,27 @@ img {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  width: 30px;
+  width: 35px;
   height: 0.5px;
   background-color: lightgray;
+  transition:
+    width 0.15s ease,
+    background-color 0.3s ease,
+    height 0.15s ease;
+}
+
+.tableContents li:hover:before {
+  width: 65px;
+  background-color: #ffffff;
+  height: 1.8px;
+  /* Grow width on hover */
 }
 
 .tableContents li:hover {
-  transform: scale(1.2);
-  transition: transform 0.2s ease-in-out;
+  color: #ffffff;
+  /* Change text color on hover */
+  padding-left: 80px;
+  /* Increase left padding on hover */
 }
 
 .tbHeaders {
