--- a/assets/style.css
+++ b/assets/style.css
@@ -158,6 +158,54 @@ img {
   margin-top: 5.5rem;
 }
 
+.projectSquare {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.projectSquare:hover {
+  background-color: #444444;
+  border-radius: 1.5%;
+}
+
+.timeline {
+  margin: 20px;
+}
+
+.projectinfo {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  /* width: 100%; */
+}
+
+.ptitle {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 5px;
+}
+
+.ptools {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+}
+
+.circleTool {
+  background-color: #555555;
+  color: #66FFFF;
+  width: 100px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 23%;
+  margin: 0 5px;
+  padding: 0 6px;
+}
+
 /* Media Queries for responsiveness */
 @media (max-width: 1450px) {
   .container {
