--- a/assets/style.css
+++ b/assets/style.css
@@ -168,7 +168,16 @@ img {
 .projectSquare:hover {
   background-color: #444444;
   border-radius: 1.5%;
+  box-shadow: 0 -4px 8px rgba(255, 255, 255, 0.2);
 }
+
+.projectSquare.dim .ptitle,
+.projectSquare.dim .projectinfo,
+.projectSquare.dim .timeline {
+  color: #888888;
+}
+
+/* .projectSquare.dim . */
 
 .timeline {
   margin: 20px;
@@ -187,6 +196,10 @@ img {
   margin-bottom: 5px;
 }
 
+.projectSquare:hover .ptitle {
+  color: #66ccff;
+}
+
 .ptools {
   display: flex;
   justify-content: space-between;
@@ -194,8 +207,8 @@ img {
 }
 
 .circleTool {
-  background-color: #555555;
-  color: #66FFFF;
+  background-color: #2a3b4c;
+  color: #66ccff;
   width: 100px;
   height: 30px;
   display: flex;
@@ -204,6 +217,11 @@ img {
   border-radius: 23%;
   margin: 0 5px;
   padding: 0 6px;
+}
+
+.projectSquare.dim .circleTool {
+  color: #99ccdd;
+  background-color: #1e2a34;
 }
 
 /* Media Queries for responsiveness */
