--- a/assets/style.css
+++ b/assets/style.css
@@ -122,7 +122,7 @@ img {
 .tableContents li:hover:before {
   width: 65px;
   background-color: #ffffff;
-  height: 1.8px;
+  height: 1.85px;
 }
 
 .tableContents li:hover {
@@ -156,6 +156,7 @@ img {
 
 .personalProjects {
   margin-top: 5.5rem;
+  padding-bottom: 7.5rem;
 }
 
 .projectSquare {
@@ -181,9 +182,9 @@ img {
   margin: 20px;
   white-space: nowrap;
   font-size: 14.5px;
-  
 }
-.pbodyinfo{
+
+.pbodyinfo {
   font-size: 14.5px;
 }
 
